<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.dataclub.DataClubFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_data_club"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <ImageView
        android:id="@+id/iv_delete_data_club"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:stretchColumns="1,2,3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <TableRow>

            <TextView
                android:id="@+id/tv_title_no"
                android:background="@drawable/table_border"
                android:maxEms="2"
                android:minWidth="48dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:text="@string/text_no"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_title_club_name"
                android:background="@drawable/table_border"
                android:maxEms="3"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:text="@string/lable_club_name"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_title_city"
                android:background="@drawable/table_border"
                android:maxEms="3"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:text="@string/label_city"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_data_club"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <ImageView
        android:id="@+id/iv_data_not_found"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_edit_pencil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_data_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please add new data"
        app:layout_constraintEnd_toEndOf="@+id/iv_data_not_found"
        app:layout_constraintStart_toStartOf="@+id/iv_data_not_found"
        app:layout_constraintTop_toBottomOf="@+id/iv_data_not_found" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_data_club"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>