<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.standings.StandingsFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_standings"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_reset_standings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TableLayout
                android:id="@+id/tl_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow>

                    <TextView
                        android:id="@+id/tv_title_no"
                        android:layout_width="48dp"
                        android:background="@drawable/table_border"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="8dp"
                        android:text="@string/text_no"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_title_club_name"
                        android:layout_width="120dp"
                        android:background="@drawable/table_border"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="8dp"
                        android:text="@string/lable_club_name"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_match"
                        android:layout_width="48dp"
                        android:background="@drawable/table_border"
                        android:gravity="center"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="8dp"
                        android:text="Ma"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_win"
                        android:layout_width="48dp"
                        android:background="@drawable/table_border"
                        android:gravity="center"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="8dp"
                        android:text="W"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_draw"
                        android:layout_width="48dp"
                        android:background="@drawable/table_border"
                        android:gravity="center"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="8dp"
                        android:text="D"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_lose"
                        android:layout_width="48dp"
                        android:background="@drawable/table_border"
                        android:gravity="center"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="8dp"
                        android:text="L"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_goal_for"
                        android:layout_width="48dp"
                        android:background="@drawable/table_border"
                        android:gravity="center"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="8dp"
                        android:text="GF"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_goal_against"
                        android:layout_width="48dp"
                        android:background="@drawable/table_border"
                        android:gravity="center"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="8dp"
                        android:text="GA"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_point"
                        android:layout_width="72dp"
                        android:background="@drawable/table_border"
                        android:gravity="center"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="8dp"
                        android:text="Point"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </TableRow>

            </TableLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_standings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tl_head"
                tools:listitem="@layout/item_row_standings" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>